CHANGELOG for the 'Epeios' framework.

2017-06-04 :
- SCLARGMNT :
	- Adding 'FillRegistry(...)' variant.
	- Removing useless function since adding above function.

2017-05-12 :
- RGSTRY :
	- Fixing infinite auto-recursion bug.

2017-05-05 :
- SCLXDHTML, XDHCMN, XDHDWS, XDHUJP, XDHUJR, XDHUJS :
	- 'content' related features are renamed to 'value', to avoid confusion of the new 'content' handling.
- XDHDWS :
	- Replacing 'Set(Element|Document)...' with a unique 'Set...' (equivalent to 'SetElement...').

2017-04-28 :
- SCLXDHTML, XDHUJP, XDHUJR, XDHUJSn XDHUTL :
	- Adaptation to changes in 'XDHCMN'.
- XDHCMN :
	- Replacing 'Fill...' by 'Fetch...Marks'.
- XDHDWS :
	- 'rack's now contains the 'target' string.

2017-04-25 :
- XDHDWS :
	- The content rack related stuff becomes layout rack.
	- The context rack related stuff becomes casting rack.

2017-04-22 :
- FLX :
	- Adding missing 'override'.

2017-04-19 :
- XDHCMN, XDHDWS, XDHUJx ;
	- Adding data filling handling.

2017-03-24 :
- TXF
	- Adding missing 'int' variant for operator '<<'.

2017-03-23 :
- 'JNIOBJ' -> 'JREBSE'.

2017-03-17 :
- SCLN -> SCLNJS.
- V8Q, SCLNJS
	- Moving 'v8q::sArguments' to 'sclnjs'.

2017-03-09 :
- MSCMDD, MSCMDF, MSCMDM :
	- Adaptation to changes.

2017-03-09 :
- SCLARGMNT :
	- Removing unused variable.

2017-03-08 :
- CSDBNC, CSDMXC, DWTDCT :
	- Adaptation to changes in 'MTK'.
- PRXY :
	- Updating.
- PRXYBASE, SCLFRNTND, SCLXDHTML, XDHDWS :
	- Workaround to modification of '(q|E_)CDEF(...)'.

2017-03-07 :
- SCLMISC :
	- Adding possibility to 'Initialize(...)' without '.x(cgf|lcl)' files.

2017-03-06 :
- V8Q :
	- Adding 'console' related features.

2017-03-04 :
- NODEQ :
	- Rewriting 'sBuffer' so it is based on 'node::Buffer'.

2017-03-03 :
- SCLN :
	- Adding ABI version in the text returned by the 'info()' function.

2017-02-25 :
- Global:
	- Fixing g++ warnings.

2017-02-24 :
- Global:
	- Fixing g++ warnings.

2017-02-22 :
- Global:
	- Fixing g++ warnings.

2017-02-21 :
- FLX :