@@ -1,5 +1,5 @@
 environment:
-  version: 20170616
+  version: 20170620
   affix: esketch
   matrix:
     - nodejs_version: "8"
